# gswa-supermodel

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
backbone/: index.html
background/: index.html
components/: index.html
components/admin-features-profile/: index.html
components/authorities/: index.html
components/boreholes-profile/: index.html
components/bores/: index.html
components/features-hierarchy/: index.html
components/geo-features/: index.html
components/geo-features-profile/: index.html
components/mines/: index.html
components/resource-occurrence/: index.html
components/samples/: index.html
components/samples-profile/: index.html
components/sites-admin/: index.html
docs/: backbone.md  background.md  components.md  index.md  supermodel.md  validators.md  vocabularies.md
docs/components/: admin-features-profile.md  authorities.md  boreholes-profile.md  boreholes.md  bores.md  features-hierarchy.md  geo-features-profile.md  geo-features.md  mines.md  resource-occurrence.md  samples-profile.md  samples.md  sites-admin.md
docs/stylesheets/: extra.css
gswasm/: mkdocs.yml
gswasm/docs/: background.md  components.md
rdf/: wa-borehole.ttl
rdf/backbone/: profile.ttl  validator-compounded.ttl  validator.ttl
rdf/borehole/: profile.ttl  schema.ttl  validator.ttl
rdf/borehole/examples/: eg-01.ttl
rdf/vocabularies/: materials.ttl  samplingMethods.ttl  specimenType.ttl
search/: search_index.json
supermodel/: index.html
validators/: index.html
vocabularies/: index.html
(+1 files in other folders)
