[tool.poetry]
name = "gswa-supermodel"
version = "0.1.0"
description = ""
authors = ["Nicholas Car <nick@kurrawong.net>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.0"
mkdocs-ezlinks-plugin = "^0.1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
